--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
@@ -40,8 +40,12 @@ oneagent:
   waitReadySeconds: null
   priorityClassName: ""
   serviceAccountName: ""
+  unprivilegedServiceAccountName: ""
   proxy: ""
   trustedCAs: ""
+  networkZone: ""
+  useUnprivilegedMode: false
+  useImmutableImage: false
 
 secret:
   apiToken: ""
