--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -44,6 +44,8 @@ oneagent:
   proxy: ""
   trustedCAs: ""
   networkZone: ""
+  useUnprivilegedMode: false
+  useImmutableImage: false
 
 secret:
   autoCreate: true
