--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configuration-job.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configuration-job.yaml
@@ -34,6 +34,7 @@ spec:
           sed "s/##UID##/${uid}/g" /objects/psp-operator.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/psp-oneagent.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/psp-webhook.yaml | kubectl apply -f -
+          sed "s/##UID##/${uid}/g" /objects/psp-oneagent-unprivileged.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/oneagentapm_crd.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/oneagent_crd.yaml | kubectl apply -f -
           sleep 5
