--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
@@ -82,6 +82,8 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 10
           ports:
+            - name: metrics
+              containerPort: 8383
             - name: server-port
               containerPort: 8443
           resources:
@@ -108,6 +110,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          ports:
+            - name: metrics
+              containerPort: 8484
           resources:
             requests:
               cpu: 10m
@@ -120,5 +125,5 @@ spec:
               mountPath: /mnt/webhook-certs
       serviceAccountName: {{ .Values.webhookServiceAccount }}
       volumes:
-      - name: certs-volume
-        emptyDir: {}
+        - name: certs-volume
+          emptyDir: {}
