--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/secret.yaml
@@ -20,7 +20,7 @@ metadata:
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 data:
-  {{- if eq .Values.mode "fullstack" }}
+  {{- if or (eq .Values.mode "fullstack") (eq .Values.oneagent.useImmutableImage true) }}
   apiToken: {{ .Values.secret.apiToken | b64enc }}
   {{- end }}
   paasToken: {{ .Values.secret.paasToken | b64enc }}
