--- a/dynatrace-oneagent-operator/templates/Common/clusterrole-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/clusterrole-operator.yaml
@@ -41,6 +41,7 @@ rules:
       - secrets
     resourceNames:
       - dynatrace-oneagent-config
+      - dynatrace-oneagent-pull-secret
     verbs:
       - get
       - update
