--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
@@ -22,7 +22,7 @@ metadata:
 spec:
   apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl }}
   tokens: {{ .Values.oneagent.name }}
-  image: {{ include "dynatrace-oneagent.image" . }}
+  image: {{ include "dynatrace-oneagent.image" . | quote }}
 
   {{- if ne (printf "%T" .Values.oneagent.args) "string" }}
   args: {{- toYaml .Values.oneagent.args | nindent 4 }}
@@ -95,5 +95,13 @@ spec:
 
   {{- if .Values.oneagent.networkZone }}
   networkZone: {{ .Values.oneagent.networkZone }}
+  {{- end }}
+
+  {{- if .Values.oneagent.useUnprivilegedMode }}
+  useUnprivilegedMode: {{ .Values.oneagent.useUnprivilegedMode }}
+  {{- end }}
+
+  {{- if .Values.oneagent.useImmutableImage }}
+  useImmutableImage: {{ .Values.oneagent.useImmutableImage }}
   {{- end }}
 {{ end }}
