--- a/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/deployment-webhook.yaml
@@ -83,6 +83,8 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 10
           ports:
+            - name: metrics
+              containerPort: 8383
             - name: server-port
               containerPort: 8443
           resources:
@@ -109,6 +111,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          ports:
+            - name: metrics
+              containerPort: 8484
           resources:
             requests:
               cpu: 10m
@@ -121,5 +126,5 @@ spec:
               mountPath: /mnt/webhook-certs
       serviceAccountName: dynatrace-oneagent-webhook
       volumes:
-      - name: certs-volume
-        emptyDir: {}
+        - name: certs-volume
+          emptyDir: {}
