--- a/dynatrace-oneagent-operator/templates/Kubernetes/rolebinding-oneagent-unprivileged.yaml
+++ b/dynatrace-oneagent-operator/templates/Kubernetes/rolebinding-oneagent-unprivileged.yaml
@@ -12,19 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-name: dynatrace-oneagent-operator
-description: The Dynatrace OneAgent Operator Helm chart for Google Kubernetes Engine
-home: https://www.dynatrace.com/
-type: application
-version: 0.9
-appVersion: 0.9
-maintainers:
-  - name: DTMad
-    email: marco.mader@dynatrace.com
-  - name: lrgar
-    email: luis.garcia@dynatrace.com
-  - name: mmayr-at
-    email: michael.mayr@dynatrace.com
-sources:
-  - https://github.com/Dynatrace/helm-charts
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if eq .Values.platform "kubernetes" }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: dynatrace-oneagent-unprivileged
+  namespace: dynatrace
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: dynatrace-oneagent-unprivileged
+subjects:
+  - kind: ServiceAccount
+    name: dynatrace-oneagent-unprivileged
+    namespace: dynatrace
+{{ end }}
