--- a/dynatrace-operator-google-marketplace/charts/dynatrace-operator/templates/secret.yaml
+++ b/dynatrace-operator-google-marketplace/charts/dynatrace-operator/templates/secret.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,4 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gcr.io/cloud-marketplace-tools/k8s/deployer_helm/onbuild
+{{- if and (.Values.apiToken) (.Values.paasToken) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.name }}
+  namespace: {{ .Release.Namespace }}
+data:
+  apiToken: {{ .Values.apiToken | b64enc }}
+  paasToken: {{ .Values.paasToken | b64enc }}
+  {{- if .Values.proxy }}
+  proxy: {{ .Values.proxy | b64enc }}
+  {{- end }}
+type: Opaque
+{{- end }}
