--- a/dynatrace-operator/templates/secret.yaml
+++ b/dynatrace-operator/templates/secret.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -21,5 +21,8 @@ metadata:
 data:
   apiToken: {{ .Values.apiToken | b64enc }}
   paasToken: {{ .Values.paasToken | b64enc }}
+  {{- if .Values.proxy }}
+  proxy: {{ .Values.proxy | b64enc }}
+  {{- end }}
 type: Opaque
 {{- end }}
