--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagentapm.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagentapm.yaml
@@ -47,4 +47,12 @@ spec:
   {{- if .Values.oneagent.useImmutableImage }}
   useImmutableImage: {{ .Values.oneagent.useImmutableImage }}
   {{- end }}
+
+  {{- if .Values.oneagent.agentVersion }}
+  agentVersion: {{ .Values.oneagent.agentVersion }}
+  {{- end }}
+
+  {{- if .Values.oneagent.resources }}
+  resources: {{- toYaml .Values.oneagent.resources | nindent 4 }}
+  {{- end }}
 {{ end }}
