--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -15,6 +15,9 @@
 platform: "kubernetes"
 mode: "fullstack"
 
+# In case you don't want PSP to be created by this chart
+createPodSecurityPolicies: true
+
 operator:
   image: ""
   # The expected format is YAML and not a string
