--- a/dynatrace-oneagent-operator/templates/Openshift/securitycontextconstraints-unprivileged.yaml
+++ b/dynatrace-oneagent-operator/templates/Openshift/securitycontextconstraints-unprivileged.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-{{- if eq .Values.platform "openshift" }}
+{{- if and (eq .Values.platform "openshift") (.Values.createPodSecurityPolicies) }}
 apiVersion: v1
 kind: SecurityContextConstraints
 metadata:
